# practical_system_programming_for_rust_developers

./: README.md
ch03/template-engine/src/: lib.rs  main.rs
ch04/imagecli/: Cargo.toml
ch04/imagecli/src/: imagecli.rs
ch04/imagecli/src/imagix/: error.rs  resize.rs  stats.rs
ch05/template-engine/src/: lib.rs  main.rs
ch06/rstat/: Cargo.toml
ch06/rstat/src/: error.rs  main.rs  srcstats.rs
ch07/tui/: Cargo.toml
ch07/tui/src/: main.rs
ch10/usb/: '  Cargo.toml
ch10/usb/src/: main.rs
