[package]
name = "imagecli"
version = "0.1.0"
edition = "2021"

[lib]
name = "imagix"
path = "src/imagix/mod.rs"

[[bin]]
name = "imagecli"
path = "src/imagecli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.7"
structopt = "0.3.15"

